projetGL/src/test/deca/extension/synt/invalid/test_invalid_10.deca
//Description: erreur declaration tableau dans les dimensions

{
    int x,y;
    int tab[][][];
    x=3;
    y=5;
    tab[][][]=new int[x][y];

}